@@ -30,24 +30,6 @@ scalacOptions ++= Seq(
   "-Xfuture"
 )
 
-// group tests, a single test per group
-def singleTests(tests: Seq[TestDefinition]) = {
-  // We could group non Cassandra tests into another group
-  // to avoid new JVM for each test, see http://www.scala-sbt.org/release/docs/Testing.html
-  val javaOptions = Seq("-Xms512M", "-Xmx1G", "-XX:+PrintGCDetails", "-XX:+PrintGCTimeStamps")
-  tests map { test =>
-    Group(
-      name = test.name,
-      tests = Seq(test),
-      runPolicy = SubProcess(javaOptions))
-  }
-}
-
-javaOptions in Test ++= Seq("-Xms512M", "-Xmx1G", "-XX:+PrintGCDetails", "-XX:+PrintGCTimeStamps")
-
-fork in Test := true // for Cassandra tests
-
-testGrouping in Test <<= definedTests in Test map singleTests // for Cassandra tests
 
 // show full stack traces and test case durations
 testOptions in Test += Tests.Argument("-oDF")
